--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 												<input type="submit" value="Send Message" />
 											</div>
 											<input type="hidden" name="_captcha" value="false">
-											<input type="hidden" name="_next" value="https://google.com">
+											<input type="hidden" name="_next" value="https://vaishnav-sh.github.io/assets/thanks.html">
 										</div>
 									</div>
 								</form>
